import("ExternalLibs.gni")

if(is_mac || is_linux){
    zlib_link = "${external_lib_path}/zlib/libz.${shared_lib_suffix}"
    libtiff_link = ["${external_lib_path}/libtiff/libtiff.${shared_lib_suffix}","${external_lib_path}/libtiff/libtiffxx.${shared_lib_suffix}"]
    pcre2_link = "${external_lib_path}/pcre2/libpcre2.${shared_lib_suffix}"
    libjpeg_turbo_link  = "${external_lib_path}/libjpeg-turbo/libturbojpeg.${shared_lib_suffix}"
    libpng_link = "${external_lib_path}/libpng/libpng.${shared_lib_suffix}"
}
else {
    libpng_link = "${external_lib_path}/libpng/libpng.dll"
    libjpeg_turbo_link = ["${external_lib_path}/libjpeg-turbo/turbojpeg.dll"]
    zlib_link = "${external_lib_path}/zlib/zlib.${shared_lib_suffix}"
    pcre2_link = "${external_lib_path}/pcre2/pcre2.${shared_lib_suffix}"
    libtiff_link = ["${external_lib_path}/libtiff/libtiff/tiff.${shared_lib_suffix}","${external_lib_path}/libtiff/libtiff/tiffxx.${shared_lib_suffix}"]
    icu_link = ["${external_lib_path}/icu-69/icu-common"]
}